--- a/style.css
+++ b/style.css
@@ -2,9 +2,10 @@ body {
   background-color: black;
   display: flex;
   justify-content: center;
-  margin: 0px;
+  margin: auto;
   height: 100vh;
   align-items: center;
+  gap: 40px;
 }
 .box {
   align-items: center;
