--- a/style.css
+++ b/style.css
@@ -1,33 +1,41 @@
-body {
-  background-color: black;
-  display: flex;
-  justify-content: center;
-  margin: auto;
-  height: 100vh;
-  align-items: center;
-  gap: 40px;
+body{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0px;
+    height: 100vh;
+    gap: 20px;
 }
-.box {
-  align-items: center;
-  display: flex;
-  flex-direction: column;
-  background-color: aqua;
-  border-radius: 25px;
-  gap: 30px;
-  padding: 20px 40px;
+
+.Box{
+    border-radius: 30px;
+    background-color: rgb(248, 247, 186);
+    padding: 10px 20px ;
+    display: flex;
+    flex-direction: column; 
+    gap: 60px;
+    
 }
-.myimg {
-  height: 200px;
-  width: 200px;
-  border-radius: 99999px;
+
+img{
+    height: 200px;
+    width: 200px;
+    border-radius: 9999px;
+   
 }
-.btn {
-  background-color: aquamarine;
-  color: white;
-  border-radius: 30px;
-  padding: 10px 50px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 5px;
+
+.sBox{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(143, 133, 88);
+    border-radius: 30px;
+    padding: 10px;
+
+}
+
+.AE{
+    font-weight: bold;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
